--- a/assignment/09-lab/index.html
+++ b/assignment/09-lab/index.html
@@ -548,7 +548,7 @@ fun1alt &lt;- function(n = 100, k = 4, lambda = 4) {
   # YOUR CODE HERE
 }
 </code></pre>
-<p>Show that <code>fun2</code> generates a matrix with the same dimensions as <code>fun1</code> and that the values inside the two matrices follow similar distributions. Then check the speed of the two functions with the following code:</p>
+<p>Show that <code>fun1alt</code> generates a matrix with the same dimensions as <code>fun1</code> and that the values inside the two matrices follow similar distributions. Then check the speed of the two functions with the following code:</p>
 <pre><code class="language-r"># Benchmarking
 microbenchmark::microbenchmark(
   fun1(),
