--- a/assignment/09-hw3/index.html
+++ b/assignment/09-hw3/index.html
@@ -32,7 +32,7 @@
   
   <meta name="description" content="Due Date This assignment is due by midnight Pacific Time, November 3rd, 2023.
 The learning objectives are to conduct data scraping and perform text mining.
-APIs   Using the NCBI API, look for papers that show up under the term &ldquo;sars-cov-2 trial vaccine.&rdquo; Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?">
+Text Mining A new dataset has been added to the data science data repository https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed. The dataset contains 3,241 abstracts from articles collected via 5 PubMed searches. The search terms are listed in the second column, term and these will serve as the &ldquo;documents.&rdquo; Your job is to analyse these abstracts to find interesting insights.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/assignment/09-hw3/">
@@ -246,10 +246,10 @@ APIs   Using the NCBI API, look for papers that show up under the term &ldquo;sa
   
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/assignment/09-hw3/">
-  <meta property="og:title" content="Assignment 03 - Web Scraping and Text Mining | Introduction to Health Data Science - PM 566">
+  <meta property="og:title" content="Assignment 03 - Text Mining | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Due Date This assignment is due by midnight Pacific Time, November 3rd, 2023.
 The learning objectives are to conduct data scraping and perform text mining.
-APIs   Using the NCBI API, look for papers that show up under the term &ldquo;sars-cov-2 trial vaccine.&rdquo; Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?"><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+Text Mining A new dataset has been added to the data science data repository https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed. The dataset contains 3,241 abstracts from articles collected via 5 PubMed searches. The search terms are listed in the second column, term and these will serve as the &ldquo;documents.&rdquo; Your job is to analyse these abstracts to find interesting insights."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -282,7 +282,7 @@ APIs   Using the NCBI API, look for papers that show up under the term &ldquo;sa
   <meta name="msapplication-TileImage" content="https://uscbiostats.github.io/PM566/img/mstile-144x144.png" />
 
 
-  <title>Assignment 03 - Web Scraping and Text Mining | Introduction to Health Data Science - PM 566</title>
+  <title>Assignment 03 - Text Mining | Introduction to Health Data Science - PM 566</title>
 
 </head>
 
@@ -468,7 +468,7 @@ APIs   Using the NCBI API, look for papers that show up under the term &ldquo;sa
   
   
 <div class="article-container pt-3">
-  <h1>Assignment 03 - Web Scraping and Text Mining</h1>
+  <h1>Assignment 03 - Text Mining</h1>
 
   
 
@@ -530,32 +530,13 @@ APIs   Using the NCBI API, look for papers that show up under the term &ldquo;sa
       <h2 id="due-date">Due Date</h2>
 <p>This assignment is due by midnight Pacific Time, November 3rd, 2023.</p>
 <p>The learning objectives are to conduct data scraping and perform text mining.</p>
-<h2 id="apis">APIs</h2>
-<ul>
-<li>
-<p>Using the NCBI API, look for papers that show up under the term &ldquo;sars-cov-2 trial vaccine.&rdquo; Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?</p>
-</li>
-<li>
-<p>Using the list of PubMed IDs you retrieved, download each papers' details using the query parameter <code>rettype = abstract</code>. If you get more than 250 ids, just keep the first 250.</p>
-</li>
-<li>
-<p>As we did in lab 7. Create a dataset containing the following:</p>
-<ol>
-<li>Pubmed ID number,</li>
-<li>Title of the paper,</li>
-<li>Name of the journal where it was published,</li>
-<li>Publication date, and</li>
-<li>Abstract of the paper (if any).</li>
-</ol>
-</li>
-</ul>
 <h2 id="text-mining">Text Mining</h2>
 <p>A new dataset has been added to the data science data repository 
-<a href="https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed" target="_blank" rel="noopener">https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed</a>. The dataset contains 3241 abstracts from articles across 5 search terms. Your job is to analyse these abstracts to find interesting insights.</p>
+<a href="https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed" target="_blank" rel="noopener">https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed</a>. The dataset contains 3,241 abstracts from articles collected via 5 PubMed searches. The search terms are listed in the second column, <code>term</code> and these will serve as the &ldquo;documents.&rdquo; Your job is to analyse these abstracts to find interesting insights.</p>
 <ol>
 <li>Tokenize the abstracts and count the number of each token. Do you see anything interesting? Does removing stop words change what tokens appear as the most frequent? What are the 5 most common tokens for each search term after removing stopwords?</li>
-<li>Tokenize the abstracts into bigrams. Find the 10 most common bigram and visualize them with ggplot2.</li>
-<li>Calculate the TF-IDF value for each word-search term combination. (here you want the search term to be the &ldquo;document&rdquo;) What are the 5 tokens from each search term with the highest TF-IDF value? How are the results different from the answers you got in question 1?</li>
+<li>Tokenize the abstracts into bigrams. Find the 10 most common bigrams and visualize them with ggplot2.</li>
+<li>Calculate the TF-IDF value for each word-search term combination (here you want the search term to be the &ldquo;document&rdquo;). What are the 5 tokens from each search term with the highest TF-IDF value? How are the results different from the answers you got in question 1?</li>
 </ol>
 
     </div>
